--- a/0816_Numpy.ipynb
+++ b/0816_Numpy.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPb63KClvaXx0ec2x8VecvI",
+      "authorship_tag": "ABX9TyN2NVKdcxNAFmJvUAcNIvTZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1034,7 +1034,7 @@
         "id": "hHXTYQ5sPq0j"
       },
       "source": [
-        "### **`np.random.rand()`와 `np.random.random()`의 차이?**\n",
+        "### **`rand()`와 `random()`의 차이?**\n",
         "- `np.random.rand()`은 인자로 int를 받고\n",
         "- `np.random.random()`은 인자로 shape을 받습니다.\n",
         "- 결과의 차이점은 없다고 생각하면 됩니다."
@@ -1562,26 +1562,602 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JWb76DJglKml"
+      },
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "6AbZ2EX5fxCe"
       },
       "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+        "## Indexing과 Slicing\n",
+        "- `list`와 상당히 유사합니다.\n",
+        "- 차이점? \n",
+        "    - Numpy의 ndarray에 대해서 slicing하면 `view`가 만들어집니다.\n"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "OUL8ApPzfxF8"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Lil9_66AlJwS",
+        "outputId": "54ca182e-de7e-4d81-cef1-672b9d1a6771"
       },
       "source": [
-        "import numpy as np"
+        "# Indexing\n",
+        "\n",
+        "arr = np.arange(10,20,1)\n",
+        "print(arr)\n",
+        "\n",
+        "for item in arr:\n",
+        "    print(item, end=' ')            \n",
+        "\n",
+        "for idx, item in enumerate(arr):    # tuple 형태로 index와 요소를 뽑아요\n",
+        "    print(idx, item)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[10 11 12 13 14 15 16 17 18 19]\n",
+            "10 11 12 13 14 15 16 17 18 19 0 10\n",
+            "1 11\n",
+            "2 12\n",
+            "3 13\n",
+            "4 14\n",
+            "5 15\n",
+            "6 16\n",
+            "7 17\n",
+            "8 18\n",
+            "9 19\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ys-onp-YxnLb",
+        "outputId": "0eb0d7cd-27c5-40e1-a243-75e7de1f6b7c"
+      },
+      "source": [
+        "# Slicing\n",
+        "\n",
+        "arr = np.arange(0,5,1)\n",
+        "print(arr)\n",
+        "\n",
+        "tmp = arr[0:3]\n",
+        "print(tmp)\n",
+        "\n",
+        "arr[0] = 100\n",
+        "\n",
+        "print(arr)\n",
+        "print(tmp)  # view인 tmp에서도 바뀌어요!"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[0 1 2 3 4]\n",
+            "[0 1 2]\n",
+            "[100   1   2   3   4]\n",
+            "[100   1   2]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lnkvv7M7ncwk",
+        "outputId": "b33ef986-3f44-4c06-d733-e2fe24e53649"
+      },
+      "source": [
+        "# slicing 방식은 기본적으로 리스트와 비슷해요.\n",
+        "\n",
+        "arr = np.arange(0,5,1)\n",
+        "print(arr)\n",
+        "\n",
+        "print(arr[0:3])     # print(arr[0:3:1])와 같아요 \n",
+        "print(arr[0:-1])\n",
+        "print(arr[0::2])    # 2칸씩 증가"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[0 1 2 3 4]\n",
+            "[0 1 2]\n",
+            "[0 1 2 3]\n",
+            "[0 2 4]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xReAAfDwnl0L",
+        "outputId": "c89865d8-a027-4be0-ad2f-cd55075087fb"
+      },
+      "source": [
+        "# 다차원 slicing\n",
+        "# 2차원 ndarray의 indexing: [행,열]\n",
+        "\n",
+        "arr = np.array([[1,2,3],\n",
+        "                [4,5,6],\n",
+        "                [7,8,9],\n",
+        "                [10,11,12]])\n",
+        "\n",
+        "print(arr)\n",
+        "print(arr[1,2])\n",
+        "print(arr[2,:])     # 1차원의 ndarray가 결과(view)로 나와요\n",
+        "print(arr[2])\n",
+        "print(arr[1:3, :])   # 1~3행을 보여라. 2차원의 ndarray"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[ 1  2  3]\n",
+            " [ 4  5  6]\n",
+            " [ 7  8  9]\n",
+            " [10 11 12]]\n",
+            "6\n",
+            "[7 8 9]\n",
+            "[7 8 9]\n",
+            "[[4 5 6]\n",
+            " [7 8 9]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sxt0kzvAoM5K"
+      },
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5Q2SlKQiqVE0"
+      },
+      "source": [
+        "### Boolean Indexing\n",
+        "Boolean Mask 안에서 `True`로 지정된 요소만 indexing하는 방식입니다. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SwGuRaJOqZw2",
+        "outputId": "090da032-c71d-488c-fd80-5be2019ac54e"
+      },
+      "source": [
+        "# arr[Boolean Mask]로 indexing\n",
+        "\n",
+        "arr = np.arange(0,10,1)\n",
+        "print(arr)\n",
+        "print('\\n')\n",
+        "\n",
+        "\n",
+        "# 1) True/False 직접적으로 주기\n",
+        "#        [  0    1     2    3     4    5     6    7     8    9  ]\n",
+        "b_mask = [True,False,True,False,True,False,True,False,True,False]\n",
+        "print(arr[b_mask])\n",
+        "print('\\n')\n",
+        "\n",
+        "\n",
+        "# 2) 사칙연산 수행 --> shape이 같아야 해요\n",
+        "arr1 = np.arange(0,3,1)\n",
+        "arr2 = np.arange(10,13,1)\n",
+        "print(arr1)\n",
+        "print(arr2)\n",
+        "print(arr1 + arr2)  # shape이 맞기 때문에 요소끼리 더하는 연산을 수행해요.\n",
+        "print(arr1 + 1)     # scalar인 1을 자동으로 shape을 맞춘 vector로 만들어서 연산해요.(Broadcasting)\n",
+        "print('\\n')\n",
+        "\n",
+        "\n",
+        "# 3) 연산자 논리를 통해 masking\n",
+        "print(arr2[arr2%2 == 0])    # arr2 중에서 짝수인 것만 masking\n",
+        "print(arr2[arr2 < 12])      # arr2 중에서 12보다 작은 수만 masking"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[0 1 2 3 4 5 6 7 8 9]\n",
+            "\n",
+            "\n",
+            "[0 2 4 6 8]\n",
+            "\n",
+            "\n",
+            "[0 1 2]\n",
+            "[10 11 12]\n",
+            "[10 12 14]\n",
+            "[1 2 3]\n",
+            "\n",
+            "\n",
+            "[10 12]\n",
+            "[10 11]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wUuCDI5yv-zj"
+      },
+      "source": [
+        "#### *예제*\n",
+        "1부터 100까지 수 중 3의 배수의 개수를 구하세요."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "T4rDhYEfwBvl",
+        "outputId": "bfb3d37e-38de-489a-c271-d951d3735df7"
+      },
+      "source": [
+        "arr = np.arange(1,101,1)\n",
+        "print(len(arr[arr%3 == 0]))"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "33\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XFt5rN3ow2Z5"
+      },
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "quPAd0OQw3Yf"
+      },
+      "source": [
+        "### Fancy Indexing\n",
+        "- ndarray에 `index 배열`(list, ndarray)를 전달해서 indexing하는 방식입니다."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "at4R1Ekuw4EI",
+        "outputId": "d6326b5d-61ce-4452-9982-c2e4fa98e676"
+      },
+      "source": [
+        "arr = np.arange(0,5,1)\n",
+        "print(arr)\n",
+        "\n",
+        "print(arr[1])           # 기본 숫자 indexing\n",
+        "print(arr[[0, 2, 3]])   # index 배열을 넣어서 데이터를 추출해요"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[0 1 2 3 4]\n",
+            "1\n",
+            "[0 2 3]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4gO6BYJBy2Ty"
+      },
+      "source": [
+        "#### *예제*"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UqDIn9g0zH8X",
+        "outputId": "9adc218b-03bb-4c04-af99-837932e127a4"
+      },
+      "source": [
+        "arr = np.arange(0,12,1).reshape(3,4).copy()\n",
+        "print(arr)\n",
+        "print('\\n')\n",
+        "\n",
+        "print(arr[1,2])         # 6     : scalar\n",
+        "print(arr[1:2, 2])      # [6]   : 1차원 -- 슬라이싱 1번\n",
+        "print(arr[1:2, 2:3])    # [[6]] : 2차원 -- 슬라이싱 2번\n",
+        "print('\\n')\n",
+        "\n",
+        "print(arr[[0,2], 2])    # [ 2 10] : 행을 Fancy Indexing으로 slicing\n",
+        "print(arr[[0,2], 2:3])  # [[ 2]\n",
+        "print('\\n')             #  [10]]  : 행을 fancy indexing, 열을 slicing"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[ 0  1  2  3]\n",
+            " [ 4  5  6  7]\n",
+            " [ 8  9 10 11]]\n",
+            "\n",
+            "\n",
+            "6\n",
+            "[6]\n",
+            "[[6]]\n",
+            "\n",
+            "\n",
+            "[ 2 10]\n",
+            "[[ 2]\n",
+            " [10]]\n",
+            "\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_E8BogjX10KA"
+      },
+      "source": [
+        "> Fancy Indexing을 두 번 쓸 수 있을까?\n",
+        "- 아뇨! 그렇게 쓸 수 없습니다.  \n",
+        "1) 따로 쓰거나  \n",
+        "2) `np._ix`함수를 이용해야 합니다."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "R4B-1NbT2LUV",
+        "outputId": "7840d1f3-552c-40ba-d4da-7575ba43bce9"
+      },
+      "source": [
+        "arr = np.arange(0,12,1).reshape(3,4).copy()\n",
+        "print(arr)\n",
+        "print('\\n')\n",
+        "\n",
+        "\n",
+        "# !!주의!! 이렇게 둘 다 fancy indexing을 하면 안돼요.\n",
+        "print(arr[[0,2], [0,2]])         \n",
+        "\n",
+        "\n",
+        "# 방법 1) 따로 쓰면 돼요.\n",
+        "# 행을 먼저 slicing 하고, 그 결과에 열을 추려요.\n",
+        "result = arr[[0,2]][:,[0,2]]\n",
+        "print(result)\n",
+        "\n",
+        "\n",
+        "# 방법 2) np.ix_ 함수를 이용해요.\n",
+        "result2 = arr[np.ix_([0,2], [0,2])]\n",
+        "print(result2)"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[ 0  1  2  3]\n",
+            " [ 4  5  6  7]\n",
+            " [ 8  9 10 11]]\n",
+            "\n",
+            "\n",
+            "[ 0 10]\n",
+            "[[ 0  2]\n",
+            " [ 8 10]]\n",
+            "[[ 0  2]\n",
+            " [ 8 10]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vWAh2IJO4Uha"
+      },
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0LzdNzu64VaW"
+      },
+      "source": [
+        "## 사칙연산 & 행렬곱\n",
+        "- 같은 shape일 경우 연산수행이 가능합니다.\n",
+        "- `list`와 연산자의 기능이 다릅니다.\n",
+        "- 행렬곱\n",
+        "    - (k X `m`) * (`m` X s) 식으로 왼쪽 행렬의 열과 오른쪽 행렬의 행의 수가 일치해야 합니다.\n",
+        "    - `np.matmul(A,B)`함수를 이용합니다."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ilgxAtG84ao8",
+        "outputId": "eb9f993d-d2da-4474-9232-b5bc27ea2031"
+      },
+      "source": [
+        "# list의 연산\n",
+        "a = [1,2,3]\n",
+        "b = [4,5,6]\n",
+        "print(a + b)        # 리스트의 + 는 concatenate를 뜻해요.\n",
+        "print('\\n')\n",
+        "\n",
+        "# ndarray의 + 연산\n",
+        "arr1 = np.array([[1,2,3], [4,5,6]])\n",
+        "arr2 = np.arange(10,16,1).reshape(2,3).copy()\n",
+        "print(arr1)\n",
+        "print(arr2)\n",
+        "print(arr1 + arr2)  # ndarray의 +는 같은 위치의 요소끼리 더해요."
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3, 4, 5, 6]\n",
+            "\n",
+            "\n",
+            "[[1 2 3]\n",
+            " [4 5 6]]\n",
+            "[[10 11 12]\n",
+            " [13 14 15]]\n",
+            "[[11 13 15]\n",
+            " [17 19 21]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N1UcMrRX6PxI",
+        "outputId": "974aa55f-d42a-4eb6-83a1-289ec427bc86"
+      },
+      "source": [
+        "# ndarray의 행렬곱 (matrix multiplication)\n",
+        "\n",
+        "a = np.array([[1,2], [3,4], [5,6]]) # (3 X 2)\n",
+        "b = np.array([[1,2,3], [4,5,6]])    # (2 X 3)\n",
+        "\n",
+        "print(np.matmul(a,b))"
+      ],
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[ 9 12 15]\n",
+            " [19 26 33]\n",
+            " [29 40 51]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vnAWx6QS691x"
+      },
+      "source": [
+        "### Broadcasting\n",
+        "- 연산을 수행하기 위해 자동적으로 shape을 일치시키는 기능을 뜻합니다.\n",
+        "- `np.matmul`연산에서는 broadcasting이 발생하지 않습니다."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VMyyFlWS7BlW",
+        "outputId": "d8792dd6-5bcb-49e8-a720-f995812b42ff"
+      },
+      "source": [
+        "arr1 = np.array([[1,2,3],\n",
+        "                 [4,5,6]])   # (2 x 3)\n",
+        "arr2 = np.array([1,2,3])     # 1차원 ndarray\n",
+        "\n",
+        "\n",
+        "# shape이 다른데 어떻게 연산해야 할까요?\n",
+        "# 가능한 경우에, 자동으로 shape을 맞춰서 연산을 수행합니다.\n",
+        "\n",
+        "print(arr1 + arr2)  # arr2을 두 번\n",
+        "print(arr1 * 3)     # scalar는 broadcasting이 쉬워요\n",
+        "\n",
+        "# !!주의!! np.matmul(행렬곱) 연산에서는 broadcasting이 발생하지 않아요"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[2 4 6]\n",
+            " [5 7 9]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1589,6 +2165,7 @@
         "id": "FvsQHiMnNO8v"
       },
       "source": [
+        "\n",
         "---"
       ]
     },
@@ -1861,7 +2438,16 @@
         "id": "5DV4v1wt0qFQ"
       },
       "source": [
-        "## 예제 1"
+        "## 예제\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Z0bXAXMN9JX8"
+      },
+      "source": [
+        "### *예제 1*"
       ]
     },
     {
@@ -1902,8 +2488,8 @@
         "id": "hNuxJK0Q6Ydx"
       },
       "source": [
-        "## 예제 2\n",
-        "1. 랜덤으로 정수형 난수를 생성하여 (3, 4) ndarray를 만드세요.\n",
+        "### *예제 2*\n",
+        "1. 랜덤으로 정수형 난수를 생성하여 (3 X 4) ndarray를 만드세요.\n",
         "    - 범위: 1부터 10까지\n",
         "    - 개수: 12개\n",
         "2. 이 ndarray 안에 있는 난수 중 5 이상인 숫자들의 합을 구해서 출력하세요.\n",
